--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -24,6 +24,13 @@
    Month="07"
 }
 
+@article{guibentif2020diverse,
+  author  = {Guibentif, Carolina and Griffiths, Jonathan A. and {Imaz-Rosshandler}, Ivan and Ghazanfar, Shile and Nichols, Jennifer and Wilson, Valerie and G\"ottgens, Berthold and Marioni, John C.}, 
+  year    = "{in press}",
+  title   = "Diverse Routes towards Early Somites in the Mouse Embryo",
+  journal = "Dev. Cell",
+}
+
 @Article{lun2019emptydrops,
    Author="Lun, A. T. L.  and Riesenfeld, S.  and Andrews, T.  and Dao, T. P.  and Gomes, T.  and Marioni, J. C. ",
    Title="{{E}mpty{D}rops: distinguishing cells from empty droplets in droplet-based single-cell {R}{N}{A} sequencing data}",
