--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -25,7 +25,7 @@
 }
 
 @article{guibentif2020diverse,
-  author  = {Guibentif, Carolina and Griffiths, Jonathan A. and {Imaz-Rosshandler}, Ivan and Ghazanfar, Shile and Nichols, Jennifer and Wilson, Valerie and G\"ottgens, Berthold and Marioni, John C.}, 
+  author  = {Guibentif, Carolina and Griffiths, Jonathan A. and {Imaz-Rosshandler}, Ivan and Ghazanfar, Shila and Nichols, Jennifer and Wilson, Valerie and G\"ottgens, Berthold and Marioni, John C.}, 
   year    = "{in press}",
   title   = "Diverse Routes towards Early Somites in the Mouse Embryo",
   journal = "Dev. Cell",
@@ -61,4 +61,23 @@
    Number="5",
    Pages="421--427",
    Month="06"
+}
+
+@article{BPS_atac,
+  title = {Single-cell chromatin accessibility maps reveal regulatory programs driving early mouse organogenesis},
+  volume = {22},
+  copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+  issn = {1476-4679},
+  url = {https://www.nature.com/articles/s41556-020-0489-9},
+  doi = {10.1038/s41556-020-0489-9},
+  language = {en},
+  number = {4},
+  urldate = {2020-11-30},
+  journal = {Nature Cell Biology},
+  author = {Pijuan-Sala, Blanca and Wilson, Nicola K. and Xia, Jun and Hou, Xiaomeng and Hannah, Rebecca L. and Kinston, Sarah and Calero-Nieto, Fernando J. and Poirion, Olivier and Preissl, Sebastian and Liu, Feng and Göttgens, Berthold},
+  month = apr,
+  year = {2020},
+  note = {Number: 4
+Publisher: Nature Publishing Group},
+  pages = {487--497},
 }
